--- a/aboutus.html
+++ b/aboutus.html
@@ -10,5 +10,7 @@
         <h1 class="title">About Us</h1>
         <p></p>
         <div id="mainDiv">Who is Liz? Who is David? Learn more below!</div>
+		 <img src="https://lis500-dmoore33.ischool.wisc.edu/Liz_photo.JPEG" alt="Liz Becker" width="300" height="400">
+		 <img src="https://lis500-dmoore33.ischool.wisc.edu/davidandcouch.jpg" alt="David Moore" width="410" height="406">
     </body>
 </html>
