--- a/aboutus.html
+++ b/aboutus.html
@@ -7,10 +7,21 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 class="title">About Us</h1>
-        <p></p>
-        <div id="mainDiv">Who is Liz? Who is David? Learn more below!</div>
-		 <img src="https://lis500-dmoore33.ischool.wisc.edu/Liz_photo.JPEG" alt="Liz Becker" width="300" height="400">
+			<header>
+			<ul>
+			<li><a class="btn" href="https://lis500-dmoore33.ischool.wisc.edu/">Home</li></a>
+			<li><a class="btn" href="aboutus.html">About Us</li></a>
+			<li><a class="btn" href="techhero.html">Our Tech Hero</li></a>
+			<li><a class="btn" href="resources.html">Implicit Bias Resources</li></a>
+			</ul>
+			</header>
+        <h1>About Us</h1>
+        <div class="headerbreak"></div>
+        <h2>Liz Becker</h2>
+							<p>About Liz</p>
+			<img src="https://lis500-dmoore33.ischool.wisc.edu/Liz_photo.JPEG" alt="Liz Becker" width="300" height="400">
+		<h2>David Moore</h2>
+							<p>About David</p>
 		 <img src="https://lis500-dmoore33.ischool.wisc.edu/davidandcouch.jpg" alt="David Moore" width="410" height="406">
     </body>
 </html>
