--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 class="title">Liz & David's LIS 500 Website</h1>
+		<header>
+			<ul>
+			<li><a class="btn" href="https://lis500-dmoore33.ischool.wisc.edu/">Home</li></a>
+			<li><a class="btn" href="aboutus.html">About Us</li></a>
+			<li><a class="btn" href="techhero.html">Our Tech Hero</li></a>
+			<li><a class="btn" href="resources.html">Implicit Bias Resources</li></a>
+			</ul>
+		</header>	
+        <h1>Liz & David's LIS 500 Website</h1>
+		
         <div id="mainDiv">Welcome to our home page!</div>
         <br />
-        <a class="btn" href="aboutus.html">
-            <btn>About Us</btn>
-        </a>
-        <div></div>
-        <a class="btn" href="techhero.html">
-            <btn>Our Tech Hero</btn>
-        </a>
-        <div></div>
-        <a class="btn" href="resources.html">
-            <btn>Implicit Bias Resources</btn>
-        </a>
+		
     </body>
 </html>
