--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,15 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1 class="title">Implicit Bias Resources</h1>
+			<header>
+			<ul>
+			<li><a class="btn" href="https://lis500-dmoore33.ischool.wisc.edu/">Home</li></a>
+			<li><a class="btn" href="aboutus.html">About Us</li></a>
+			<li><a class="btn" href="techhero.html">Our Tech Hero</li></a>
+			<li><a class="btn" href="resources.html">Implicit Bias Resources</li></a>
+			</ul>
+			</header>
+        <h1>Implicit Bias Resources</h1>
         <p></p>
         <div id="mainDiv">More info here.</div>
     </body>
