--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         </header>
         <h1>Liz & David's LIS 500 Website</h1>
         <h3>Welcome to our home page!</h3>
-        <h3>Please use the navigation bar above to explore our others pages.</h3>
+        <h3>Please use the navigation bar above to explore our other pages.</h3>
     </body>
 </html>
