--- a/aboutus.html
+++ b/aboutus.html
@@ -21,8 +21,9 @@
 					<source src="https://lis500-dmoore33.ischool.wisc.edu/lis500_project1.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 					</video></p>
-        <div class="headerbreak"></div>
+        <div></div>
 		<!-- Liz, we didn't define the class "headerbreak on the CSS -->
+	    	<!-- David, thanks for catching that! Removed the class element -->
 		<!-- Here are our biographies -->
         <h2>Liz Becker (they/he):</h2>
         <p>
