--- a/techhero.html
+++ b/techhero.html
@@ -43,6 +43,7 @@
             years of its existence, Bryant has recieved numerous awards and commendations for Black Girls Code and the
             organization's impact on increasing access to coding and STEM resources to Black women.
         </p>
+       <div class="spacer"></div>
         <footer>
             <p>
                 Copyright Liz Becker and David Moore 2024<br />
