--- a/aboutus.html
+++ b/aboutus.html
@@ -3,25 +3,62 @@
     <head>
         <meta charset="UTF-8" />
         <title>About Us</title>
-        <link rel="stylesheet" href="styles.css"/>
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-			<header>
-			<ul>
-			<li><a class="btn" href="https://lis500-dmoore33.ischool.wisc.edu/">Home</li></a>
-			<li><a class="btn" href="aboutus.html">About Us</li></a>
-			<li><a class="btn" href="techhero.html">Our Tech Hero</li></a>
-			<li><a class="btn" href="resources.html">Implicit Bias Resources</li></a>
-			</ul>
-			</header>
+        <header>
+		<!-- using buttons in the nav bar for look and feel -->
+            <ul>
+                <li><a class="btn" href="https://lis500-egbecker.ischool.wisc.edu/">Home</a></li>
+                <li><a class="btn" href="aboutus.html">About Us</a></li>
+                <li><a class="btn" href="techhero.html">Our Tech Hero</a></li>
+                <li><a class="btn" href="resources.html">Implicit Bias Resources</a></li>
+            </ul>
+        </header>
         <h1>About Us</h1>
+					<!-- This is our Project 1 video -->
+					<p><video width="320" height="240" controls>
+					<source src="https://lis500-dmoore33.ischool.wisc.edu/lis500_project1.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+					</video></p>
         <div class="headerbreak"></div>
-        <h2>Liz Becker</h2>
-							<p>About Liz</p>
-			<img src="https://lis500-dmoore33.ischool.wisc.edu/Liz_photo.JPEG" alt="Liz Becker" width="300" height="400">
-		<h2>David Moore</h2>
-							<p>About David</p>
-		 <img src="https://lis500-dmoore33.ischool.wisc.edu/davidandcouch.jpg" alt="David Moore" width="410" height="406">
+		<!-- Liz, we didn't define the class "headerbreak on the CSS -->
+		<!-- Here are our biographies -->
+        <h2>Liz Becker (they/he):</h2>
+        <p>
+            I am a part-time student in my final year of the iSchool program! I currently live in Chicago with my
+            partner and our two cats - Twiggy and Cat Stevens. My background is in Art History and I love spending time
+            at the Art Institute here in the city. My current role is working full-time for DePaul University's Library
+            as the Loanable Technology Circulation Supervisor, where I oversee our Circulation Desk, equipment, and
+            student workers.
+        </p>
+        <p>
+            In my free time, I mostly cook (I *love* getting my hands on a new cookbook to experiment with), read and
+            watch horror media, and develop perfume. That last hobby is my newest in recent years, and I am currently
+            enrolled in courses from the Institute of Art & Olafaction. Suprisingly, there are several folks with
+            library backgrounds in my cohort!
+        </p>
+        <p>
+            Please feel welcome to connect with me on
+            <a href="https://www.linkedin.com/in/elizabeth-liz-becker-289046170/">LinkedIn</a>.
+        </p>
+        <p><img src="https://lis500-dmoore33.ischool.wisc.edu/Liz_photo.JPEG" alt="Liz Becker" width="300" height="400"></p>
+        <h2>David Moore (he/him/his):</h2>
+        <p>I am also a part-time student in my final semester of the MLIS program. I live in the greater Boston area with
+           my wife, Sajedeh. I currently work for <a href="https://library.berklee.edu/">The Library at Berklee College of Music</a> 
+		   as the Project Manager overseeing the Migration from two existing ILS's to <a href="https://folio.org/">FOLIO LSP</a>. 
+		   When not working in or studying libraries I am a professional jazz drummer, working primarily in the Boston area. 
+		   My other interest include reading, RPG's, and history.</p>
+        <p class="photo"><!-- CSS class "photo" seperate photo from footer -->
+		<img src="https://lis500-dmoore33.ischool.wisc.edu/davidandcouch.jpg" alt="David Moore" width="410" height="406"></p>
+        <div></div>
+        <footer>
+            <p>
+				<!-- IP info below -->
+                Copyright Liz Becker and David Moore 2024<br/>
+                <a href="mailto:egbecker@wisc.edu" class="cornsilk">egbecker@wisc.edu</a>
+                <a href="mailto:dmoore33@wisc.edu" class="cornsilk">dmoore33@wisc.edu</a>
+            </p>
+        </footer>
     </body>
 </html>
