--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
     <head>
         <meta charset="UTF-8" />
         <title>Liz & David's LIS 500 Website</title>
-        <link rel="stylesheet" href="styles.css"/>
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-		<header>
-			<ul>
-			<li><a class="btn" href="https://lis500-dmoore33.ischool.wisc.edu/">Home</li></a>
-			<li><a class="btn" href="aboutus.html">About Us</li></a>
-			<li><a class="btn" href="techhero.html">Our Tech Hero</li></a>
-			<li><a class="btn" href="resources.html">Implicit Bias Resources</li></a>
-			</ul>
-		</header>	
+        <header>
+			<!-- using buttons in the nav bar for look and feel -->
+            <ul>
+                <li><a class="btn" href="https://lis500-egbecker.ischool.wisc.edu/">Home</a></li>
+                <li><a class="btn" href="aboutus.html">About Us</a></li>
+                <li><a class="btn" href="techhero.html">Our Tech Hero</a></li>
+                <li><a class="btn" href="resources.html">Implicit Bias Resources</a></li>
+            </ul>
+        </header>
         <h1>Liz & David's LIS 500 Website</h1>
-		
-        <div id="mainDiv">Welcome to our home page!</div>
-        <br />
-		
+        <h3>Welcome to our home page for Project #2 in LIS 500: Code and Power at UW-Madison!</h3>
+        <h3>
+            This site is dedicated to informing you about us, our tech hero, and intersectionality & implicit bias.
+            Please use the navigation bar above to explore our other pages. Thanks for visiting.
+        </h3>
+        <footer>
+            <p>
+				<!-- IP info below -->
+                Copyright Liz Becker and David Moore 2024<br />
+                <a href="mailto:egbecker@wisc.edu" class="cornsilk">egbecker@wisc.edu</a>
+                <a href="mailto:dmoore33@wisc.edu" class="cornsilk">dmoore33@wisc.edu</a>
+            </p>
+        </footer>
     </body>
 </html>
