--- a/resources.html
+++ b/resources.html
@@ -3,20 +3,90 @@
     <head>
         <meta charset="UTF-8" />
         <title>Implicit Bias Resources</title>
-        <link rel="stylesheet" href="styles.css"/>
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-			<header>
-			<ul>
-			<li><a class="btn" href="https://lis500-dmoore33.ischool.wisc.edu/">Home</li></a>
-			<li><a class="btn" href="aboutus.html">About Us</li></a>
-			<li><a class="btn" href="techhero.html">Our Tech Hero</li></a>
-			<li><a class="btn" href="resources.html">Implicit Bias Resources</li></a>
-			</ul>
-			</header>
+        <header>
+		<!-- using buttons in the nav bar for look and feel -->
+            <ul>
+                <li><a class="btn" href="https://lis500-egbecker.ischool.wisc.edu/">Home</a></li>
+                <li><a class="btn" href="aboutus.html">About Us</a></li>
+                <li><a class="btn" href="techhero.html">Our Tech Hero</a></li>
+                <li><a class="btn" href="resources.html">Implicit Bias Resources</a></li>
+            </ul>
+        </header>
         <h1>Implicit Bias Resources</h1>
         <p></p>
-        <div id="mainDiv">More info here.</div>
+        <p>
+            "Implicit Bias" is a term that names the attitudes and stereotypes that can subconsciously shape one's
+            thoughts, actions, and decisions without even realizing it. Whether the associations someone holds are
+            positive or negative, every single person is susceptible to having implicit biases. These biases can be best
+            understood by approaching them with an "intersectional" framework.
+            <a
+                href="https://www.law.columbia.edu/news/archive/kimberle-crenshaw-intersectionality-more-two-decades-later"
+                >Coined in 1989 by Kimberlé Crenshaw </a
+            >, intersectionality helps us understand how different identities and experiences overlap.
+        </p>
+        <p>
+            To do your part of helping create a more equitable world, please take the time to learn more about implicit
+            bias by exploring the following resources:
+        </p>
+        <ol>
+            <li>
+                Implicit Bias Test
+                <p>
+                    Harvard University's
+                    <a href="https://implicit.harvard.edu/implicit/takeatest.html">Implicit Association Test (IAT)</a>,
+                    lead by Project Implicit, is a key assessment tool for understanding one's unconscious biases.
+                </p>
+            </li>
+            <li>
+                National Equity Project's Framework on Implicit Bias and Structural Racialization
+                <p>
+                    <a href="https://www.nationalequityproject.org/frameworks/implicit-bias-structural-racialization"
+                        >This article</a
+                    >
+                    written by Kathleen Osta and Hugh Vasquez goes into depth about why discussing structural racism is
+                    crucial when unpacking implicit bias.
+                </p>
+            </li>
+            <li>
+                UCLA Office of Equity, Diversity, and Inclusion: Implicit Bias Video Series
+                <p>
+                    <a href="https://equity.ucla.edu/know/implicit-bias/">This free series</a> from the University of
+                    California, Los Angeles features six videos discussing implicit biases and their affects.
+                </p>
+            </li>
+            <li>
+                National Research Mentoring Network (NRMN) Unconscious Bias Course
+                <p>
+                    The NRMN provides professional-level mentorship and programming with a focus on diversity, equity,
+                    and inclusion.
+                    <a href="https://courses.nrmnet.net/course/c/JqPZiUQo0O">The Unconsious Bias Course</a> they offer
+                    is a multi-module program that awards certifications upon completion of each module.
+                </p>
+			<li>
+				National Association of Independent Schools (NAIS), Kimberlé Crenshaw: What is Intersectionality?
+				<p>
+					Kimberlé Crenshaw, a 2017 NAIS People of Color Conference speaker, civil rights advocate, 
+					and professor at UCLA School of Law and Columbia Law School, talks about intersectional theory, 
+					the study of how overlapping or intersecting social identities—and particularly minority 
+					identities—relate to systems and structures of discrimination.
+				</p>
+				<!-- video using embed features from Youtube -->
+				<p class="photo"> <!-- CSS class "photo" seperate video from footer -->
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/ViDtnfQ9FHc?si=BbrDdg78zhw1GsSB" 
+				title="YouTube video player" frameborder="0" 
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+				referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+            </li>
+        </ol>
+        <footer>
+            <p>
+				<!-- IP info below -->
+                Copyright Liz Becker and David Moore 2024<br />
+                <a href="mailto:egbecker@wisc.edu" class="cornsilk">egbecker@wisc.edu</a>
+                <a href="mailto:dmoore33@wisc.edu" class="cornsilk">dmoore33@wisc.edu</a>
+        </footer>
     </body>
 </html>
