--- a/techhero.html
+++ b/techhero.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Our Tech Hero</title>
+        <title>Our Tech Heroes</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
@@ -11,7 +11,7 @@
             <ul>
                 <li><a class="btn" href="https://lis500-egbecker.ischool.wisc.edu/">Home</a></li>
                 <li><a class="btn" href="aboutus.html">About Us</a></li>
-                <li><a class="btn" href="techhero.html">Our Tech Hero</a></li>
+                <li><a class="btn" href="techhero.html">Our Tech Heroes</a></li>
                 <li><a class="btn" href="resources.html">Implicit Bias Resources</a></li>
             </ul>
         </header>
