--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
         <h1>Liz & David's LIS 500 Website</h1>
         <h3>Welcome to our home page for Project #2 in LIS 500: Code and Power at UW-Madison!</h3>
         <h3>
-            This site is dedicated to informing you about us, our tech hero, and intersectionality & implicit bias.
+            This site is dedicated to informing you about us, our tech heroes, and intersectionality & implicit bias.
             Please use the navigation bar above to explore our other pages. Thanks for visiting.
         </h3>
+		<div class="center">
+			<img
+                    src="https://t4.ftcdn.net/jpg/01/64/09/67/360_F_164096780_ez4gut1yEOOJRYf0VCe9ZrGfm8mTTZqy.jpg"
+                    alt="binary art"
+                    width="540"
+                    height="360" />
         <footer>
             <p>
 				<!-- IP info below -->
