--- a/techhero.html
+++ b/techhero.html
@@ -25,10 +25,16 @@
                     height="200" />
             </p>
         </div>
-        <p>
-            <a href="https://ncwit.org/profile/kimberly-bryant/">Kimberly Bryant</a> was our choice for a tech hero that
-            is actively providing leadership in advancing racial equity because of her creation of the nonprofit
-            organization, Black Girls Code in 2011. Bryant's background is in electrical engineering, which she holds a
+      <p>
+            <a href="https://ncwit.org/profile/kimberly-bryant/">Kimberly Bryant</a> was our first choice for a
+            compelling tech hero due to her unwavering commitment to advancing equity for Black women and girls in the
+            United States. As the founder of Black Girls CODE, she has created vital pathways for young women of color
+            to enter and thrive in the tech industry, addressing the significant underrepresentation of these groups in
+            STEM fields. Bryant’s work not only empowers girls through coding workshops and mentorship programs but also
+            advocates for broader systemic change within the tech ecosystem. By highlighting the importance of diversity
+            and inclusion, she challenges industry norms and inspires a new generation of innovators. Her leadership
+            exemplifies the transformative power of technology when it is accessible to all, making her a pivotal figure
+            in the movement toward equity in tech. Bryant's background is in electrical engineering, which she holds a
             degree in from Vanderbuilt University, as well as biotechnology. She was named one of the
             <a href="https://www.businessinsider.com/most-influential-blacks-in-technology-2013-4"
                 >"25 Most Influential African-Americans In Technology"</a
@@ -38,7 +44,7 @@
         </p>
         <p>
             <a href="https://www.wearebgc.org/">Black Girls Code</a>, not to be confused with the similarly named Girls
-            Who Code, was born out of Bryant's daughter expressed an interest in learning computer programming, which
+            Who Code, was born in 2011 out of Bryant's daughter expressed an interest in learning computer programming, which
             was not plausible through the classes and workshops offered near where Bryant and her family were living.
             The focus became introducing Black girls aged 7-17 to the field of technology and programming. In the 10+
             years of its existence, Bryant has recieved numerous awards and commendations for Black Girls Code and the
@@ -55,8 +61,8 @@
             </p>
         </div>
 				<p>
-           <a href="https://www.dair-institute.org/team/">Timnit Gebru</a> was chosen as a tech hero for her dedication to
-		   promoting professional and institutional ethics,inclusion, and transparency in technology. In 2021, she and 
+           <a href="https://www.dair-institute.org/team/">Timnit Gebru</a> was chosen as our second tech hero for her dedication to
+		   promoting professional and institutional ethics, inclusion, and transparency in technology. In 2021, she and 
 		   <a href="https://www.quantamagazine.org/rediet-abebe-tackles-inequality-with-computer-science-20210401/">Rediet Abebe</a>
 		   co-founded Black in AI, an organization to promote the inclusion of black people in the field of Artificial Intelligence. 
 		   Gebru received her PhD from Stamford University in Computer Vision in 2017. As early as her time at Stamford
