--- a/resources.html
+++ b/resources.html
@@ -16,16 +16,47 @@
             </ul>
         </header>
         <h1>Implicit Bias Resources</h1>
-        <p></p>
-        <p>
-            "Implicit Bias" is a term that names the attitudes and stereotypes that can subconsciously shape one's
-            thoughts, actions, and decisions without even realizing it. Whether the associations someone holds are
-            positive or negative, every single person is susceptible to having implicit biases. These biases can be best
-            understood by approaching them with an "intersectional" framework.
+   <p>
+            The fields of technology and innovation are often heralded as beacons of progress, yet they are not immune
+            to the systemic issues that pervade society. Two critical frameworks for understanding these issues are
+            intersectionality and implicit bias. Implicit bias is a term that names the attitudes and stereotypes that
+            can unconsciously shape one's thoughts, actions, and decisions without even realizing it. Intersectionality,
             <a
-                href="https://www.law.columbia.edu/news/archive/kimberle-crenshaw-intersectionality-more-two-decades-later"
-                >Coined in 1989 by Kimberlé Crenshaw </a
-            >, intersectionality helps us understand how different identities and experiences overlap.
+                href="https://www.law.columbia.edu/news/archive/kimberle-crenshaw-intersectionality-more-two-decades-later">
+                coined by Kimberlé Crenshaw</a
+            >, examines how various social identities—such as race, gender, and socioeconomic status—intersect to create
+            unique experiences of oppression or privilege. Together, these concepts illuminate how systemic inequalities
+            manifest within the tech industry.
+        </p>
+        <p>
+            The tech industry is predominantly shaped by a homogenous group of individuals, often reflecting the
+            privilege of white, male, and affluent backgrounds. This lack of diversity has significant implications for
+            product design, workforce culture, and market reach. For instance, when predominantly white and male teams
+            develop technologies, they may overlook the needs and experiences of underrepresented groups. This is
+            evident in numerous case studies, such as facial recognition technology that exhibits bias against people of
+            color, largely because the algorithms were trained on non-diverse datasets.
+        </p>
+        <p>
+            Intersectionality offers a lens to critique this homogeneity. Women of color in tech face compounded
+            discrimination, often experiencing both sexism and racism. This dual burden can lead to their voices being
+            marginalized in decision-making processes, exacerbating issues of representation and equity. For example,
+            women of color are often underrepresented in leadership roles, resulting in a lack of diverse perspectives
+            in product development. Companies that fail to adopt an intersectional approach may inadvertently create
+            products that cater to a narrow demographic, limiting innovation and alienating large segments of the
+            market.
+        </p>
+        <p>
+            Implicit bias plays a critical role in hiring practices within the tech industry. Research shows that
+            resumes with "ethnic-sounding" names are often rated lower than those with "white-sounding" names, even when
+            qualifications are identical. This bias can extend to the evaluation of candidates during interviews and
+            performance reviews. For instance, women may face scrutiny that their male counterparts do not, leading to
+            disparities in promotions and job retention.
+        </p>
+        <p>
+            Furthermore, implicit bias contributes to a workplace culture that may unwittingly exclude certain groups.
+            This can manifest in microaggressions, which are subtle, often unintentional comments or actions that can
+            marginalize individuals based on their identity. The cumulative effect of these biases creates an
+            environment where diverse voices feel undervalued or silenced, further perpetuating the cycle of exclusion.
         </p>
         <p>
             To do your part of helping create a more equitable world, please take the time to learn more about implicit
