--- a/index.html
+++ b/index.html
@@ -7,26 +7,35 @@
     </head>
     <body>
         <header>
-			<!-- using buttons in the nav bar for look and feel -->
+            <!-- using buttons in the nav bar for look and feel -->
             <ul>
                 <li><a class="btn" href="https://lis500-egbecker.ischool.wisc.edu/">Home</a></li>
                 <li><a class="btn" href="aboutus.html">About Us</a></li>
-                <li><a class="btn" href="techhero.html">Our Tech Hero</a></li>
+                <li><a class="btn" href="techhero.html">Our Tech Heroes</a></li>
                 <li><a class="btn" href="resources.html">Implicit Bias Resources</a></li>
+                <li><a class="btn" href="machinelearning.html">Machine Learning</a></li>
             </ul>
         </header>
         <h1>Liz & David's LIS 500 Website</h1>
         <h3>Welcome to our home page for Project #2 in LIS 500: Code and Power at UW-Madison!</h3>
         <h3>
-            This site is dedicated to informing you about us, our tech hero, and intersectionality & implicit bias.
+            This site is dedicated to informing you about us, our tech heroes, and intersectionality & implicit bias.
             Please use the navigation bar above to explore our other pages. Thanks for visiting.
         </h3>
-        <footer>
-            <p>
-                Copyright Liz Becker and David Moore 2024<br />
-                <a href="mailto:egbecker@wisc.edu">egbecker@wisc.edu</a>
-                <a href="mailto:dmoore33@wisc.edu">dmoore33@wisc.edu</a>
-            </p>
-        </footer>
+        <div class="center">
+            <img
+                src="https://t4.ftcdn.net/jpg/01/64/09/67/360_F_164096780_ez4gut1yEOOJRYf0VCe9ZrGfm8mTTZqy.jpg"
+                alt="binary art"
+                width="540"
+                height="360" />
+            <footer>
+                <p>
+                    <!-- IP info below -->
+                    Copyright Liz Becker and David Moore 2024<br />
+                    <a href="mailto:egbecker@wisc.edu" class="cornsilk">egbecker@wisc.edu</a>
+                    <a href="mailto:dmoore33@wisc.edu" class="cornsilk">dmoore33@wisc.edu</a>
+                </p>
+            </footer>
+        </div>
     </body>
 </html>
