--- a/machinelearning.html
+++ b/machinelearning.html
@@ -205,6 +205,6 @@ Joy Buolamwimi<em>, Unmasking AI: My Mission to Protect What is Human in a World
         <h1>Our Teachable Machine</h1>
         <h2>Our Trained Audio Model</h2>
         <p>Our audio model identifies pitch! Please allow our webpage to have microphone permissions to see the model in action.</p>
- 		<iframe src="/home/lis500-egbecker/public_html/sketch.js" width="600px" height="400px"></iframe>
+ 		<iframe src="<iframe src="https://editor.p5js.org/codingtrain/full/e3nrNMG7A"></iframe>" width="600px" height="400px"></iframe>
     </body>
 </html>
