--- a/resources.html
+++ b/resources.html
@@ -14,6 +14,7 @@
                 <li><a class="btn" href="techhero.html">Our Tech Heroes</a></li>
                 <li><a class="btn" href="resources.html">Implicit Bias Resources</a></li>
                 <li><a class="btn" href="machinelearning.html">Machine Learning</a></li>
+                <li><a class="btn" href="ourmodel.html">Our Model</a></li>
             </ul>
         </header>
         <h1>Implicit Bias Resources</h1>
