--- a/machinelearning.html
+++ b/machinelearning.html
@@ -214,6 +214,7 @@ Joy Buolamwimi<em>, Unmasking AI: My Mission to Protect What is Human in a World
 	 <p>
             <a href="https://teachablemachine.withgoogle.com/">Click Here to Access Teachable Machines</a>
         </p>
+	    <div></div>
 	    <footer>
             <p>
                 <!-- IP info below -->
